// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message 1`] = `
<div>
  <form>
    <label>
      Name*:
      <input
        name="name"
        type="text"
        value=""
      />
    </label>
    Name is Required
    <label>
      Password*:
      <input
        name="password"
        type="password"
        value=""
      />
    </label>
    Password is Required
    <input
      type="submit"
      value="Login"
    />
  </form>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <form>
    <label>
      Name*:
      <input
        name="name"
        type="text"
        value=""
      />
    </label>
    <label>
      Password*:
      <input
        name="password"
        type="password"
        value=""
      />
    </label>
    <input
      type="submit"
      value="Login"
    />
  </form>
</div>
`;
